# mcpTrackhsConnector

./: .dockerignore  .env.example  .env.template  .env.vercel  .fastmcp.yml  .flake8  .gitignore  .pre-commit-config.yaml  .vercelignore  AMENITIES_ANALYSIS_REPORT.md  ANALISIS_COMPATIBILIDAD_ESQUEMA.md  ANALISIS_ESQUEMA_API_TRACKHS.md  ANALISIS_ESQUEMA_MEJORES_PRACTICAS.md  ANALISIS_FALLOS_SOLUCION_1.md  AUDITORIA_FASTMCP_RESUMEN.md  AUDITORIA_FASTMCP_SEARCH_UNITS.md  AUDITORIA_MCP_PROTOCOLO.md  AUDITORIA_SEGURIDAD_FASE2.md  BRIEF_PROBLEMA_TIPO_VALIDACION.md  CASOS_PRUEBA_EJECUTADOS.md  CERTIFICACION_TESTING_TRACKHS_MCP.md  CHANGELOG.md  CLAUDE.MD  CLAUDE_DESKTOP_SETUP.md  CLAUDE_WEB_SETUP.md  CLAUDE_WEB_SETUP_FINAL.md  CLEANUP_COMPLETE.md  COMANDOS_ESENCIALES.md  CORRECCIONES_CRITICAS.md  CORRECCIONES_FASTMCP_CLOUD.md  CORRECCIONES_FASTMCP_CLOUD_V2.md  CORRECCIONES_IMPLEMENTADAS.md  CORRECCIONES_IMPLEMENTADAS_SEARCH_UNITS.md  CORRECCIONES_INMEDIATAS.md  CORRECCIONES_LIMITACIONES_IMPLEMENTADAS.md  CORRECCION_FILTROS_FECHA_COMPLETADA.md  CORRECCION_ISPUBLIC.md  CORRECCION_LINTING_COMPLETADA.md  CORRECCION_LOG_ERROR.md  DEPENDENCY_UPDATE_SUMMARY.md  (+332 more)
.cursor/plans/: refactorizaci-n-trackhs-mcp-51b01f74.plan.md
.github/workflows/: ci-cd.yml  ci.yml  deploy.yml  mcp-mvp.yml  mcp-protocol-tests.yml  mcp.yml  setup-secrets.yml  test.yml
api/: health.js  index.js  index.ts  mcp-claude-web.js  mcp-claude.js  mcp-final.js  mcp-fixed.js  mcp-http.js  mcp-minimal.js  mcp-real.js  mcp-sdk.js  mcp-server.js  mcp-simple-fixed.js  mcp-sse-claude.js  mcp-sse-final.js  mcp-sse-real.js  mcp-sse.js  mcp-trackhs.js  mcp-unified.js  mcp-vercel.js  mcp-working-final.js  mcp-working.js  mcp.js  remote-mcp.js  simple-test.js  test-mcp.js  test.js  tools-schemas.js  tools.js  vercel.json
cloudflare/: worker.d.ts  worker.d.ts.map  worker.js  worker.js.map  worker.ts  wrangler.toml
cloudflare/cloudflare/: worker.js
cloudflare/src/: server.js
config/: README.md  deployment.json  development.json  fastmcp.json  jest.config.mjs  production_test_report.json  project.json  pytest.ini  tsconfig.json  vercel.json
docs/: AMENITIES_IMPROVEMENTS.md  ANALISIS_COMPATIBILIDAD_MCP.md  API_REFERENCE.md  API_V2_IMPROVEMENTS.md  AUDITORIA_HTTP.md  BUG_REPORT_DATE_FILTER.md  BUG_REPORT_TESTING.md  CLEANUP_GUIDE.md  COMPLETE_DIAGNOSIS_README.md  CONFIGURATION_GUIDE.md  CONTRIBUTING.md  CORRECCIONES_IMPLEMENTADAS.md  CORRECCIONES_WARNINGS.md  CORRECCIONES_WORK_ORDERS.md  DEBUGGING.md  DEPLOYMENT.md  DEVELOPMENT.md  DIAGNOSIS_SCRIPTS_README.md  DIRECT_SCHEMA_ANALYSIS.md  DOCUMENTATION_OVERVIEW.md  ENDPOINTS_AUDIT_REPORT.md  ENDPOINTS_REFERENCE.md  ESTRATEGIA_TESTING_MCP.md  FASTMCP_BEST_PRACTICES.md  FASTMCP_CLOUD_DIAGNOSIS.md  FASTMCP_TESTING_STRATEGY.md  FINAL_DIAGNOSIS_GUIDE.md  FINAL_SCHEMA_ANALYSIS_REPORT.md  FINAL_SUMMARY.md  FINAL_TESTING_REPORT.md  GITHUB_SECRETS_SETUP.md  GITHUB_SETUP.md  LLM_GUIDANCE_HOUSEKEEPING.md  LOCAL_TESTING.md  LOCAL_TESTS_README.md  MCP_TYPE_VALIDATION_REPORT.md  MCP_USAGE.md  MCPdesign principles.md  MEJORES_PRACTICAS_MCP.md  MEJORES_PRACTICAS_MCP_FASTMCP.md  (+53 more)
docs/MCP/: README.md  claude.md
docs/Teoria/: RemoteMCPServers.md  architecture.md  connect-remote-servers.md
docs/api/: get-folio.md  get-reservation-v2.md  getAllContacts.md  getFoliosCollection.md  getLedgerAccount.md  getNode.md  (+11 more)
docs_new/: get_amenities.md  get_folio.md  get_reservation.md  reservation_collection.md  wo_maintenance.md
documentacion oficial trackhs/: get ammenities.md  get reservation.md
examples/: README.md  basic_usage.py  client_connection_examples.py  common_queries.md  get_reservation_examples.py
public/: index.html
reference/: README.md
reports/: in_house_today_fix_report.md  in_house_today_serialization_fix_report.md  schema_display_validation.json  schema_display_validation.md  schema_improvements_final_report.md  search_reservations_schema_analysis.json  search_reservations_schema_analysis.md  search_reservations_v2_corrections_report.md  tester_fixes_report.md
scripts/: advanced_type_testing.py  analyze_logs.py  analyze_probe_results.py  build.js  check-deployment.mjs  check-vercel-env.js  check_fastmcp_cloud_config.py  check_fastmcp_cloud_ready.py  complete_diagnosis.py  debug_api_response.py  demo_folio_endpoint.py  diagnose-mcp-issue.js  diagnose_api.py  diagnose_credentials.py  diagnose_fastmcp_cloud.py  fastmcp_preflight_simple.py  fastmcp_smoke_test.py  final-verification.mjs  final_type_validation.py  intelligent_type_testing.py  mcp_tools_analyzer.py  pretest.py  pretest_simple.py  probe_units_api.py  production_testing.py  run_all_tests.py  run_bug_tests.py  run_complete_local_diagnosis.py  run_complete_solution.py  run_comprehensive_tests.py  run_final_diagnosis.py  run_full_diagnosis.py  run_local_tests.py  run_quick_test.py  setup-vercel-env.js  setup.js  setup_debugging.py  simple-test.mjs  test-connector.js  test-connector.mjs  (+39 more)
src/: __init__.py  __main__.py  _server.py  config.py  index.ts  local-server.ts  mcp-server.ts  mcp_tools.py  server.py  server.ts  server_logic.py
tests/: README.md  __init__.py  conftest.py  env.test  setup.ts  test_advanced_server.py  test_amenities_improved.py  test_amenities_phase1.py  test_amenities_phase1_fixed.py  test_amenities_phase2.py  test_business_validators.py  test_cache_and_metrics.py  test_create_maintenance_work_order.py  test_get_folio.py  test_get_reservation.py  test_get_reservation_e2e.py  test_get_reservation_integration.py  test_get_reservation_simple_fixed.py  test_get_reservation_unit.py  test_health.py  test_integration.py  test_maintenance.py  test_maintenance_work_order_comprehensive.py  test_maintenance_work_order_integration.py  test_maintenance_work_order_practical.py  test_mcp_protocol.py  test_mcp_server.py  test_middleware.py  test_network_transports.py  test_repositories_integration.py  test_reservations.py  test_response_validation.py  test_retries.py  test_sanitization.py  test_search_reservations.py  test_search_units.py  test_server.py  test_type_normalization.py  test_units.py  test_validation.py
(+566 files in other folders)
